Info logs changes.